<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="geo.geoapplication.FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/geo_application"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/gpsInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="---"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:keepScreenOn="true"
        android:text="@string/latitude"
        android:id="@+id/viewLatitude"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:text="@string/longitude"
        android:id="@+id/viewLongitude"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:text="@string/speed"
        android:id="@+id/speed"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:text="@string/distance"
        android:id="@+id/distance"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:text="@string/accuracy"
        android:id="@+id/accuracy"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:text="@string/last_fix"
        android:id="@+id/lastFix"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        </LinearLayout>

        <requestFocus />

        <Button
            android:id="@+id/startButton"
            android:layout_marginLeft="250dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start" />


    </FrameLayout>

</FrameLayout>
